--- a/RELEASE_NOTES/2.0.0-internal.8.0.0.md
+++ b/RELEASE_NOTES/2.0.0-internal.8.0.0.md
@@ -137,13 +137,13 @@ This interface is deprecated and was not intended for public export.
 
 Removed the following APIs:
 
-- Stack
-- clone
-- combine
-- createMap
-- extend
-- extendIfUndefined
-- matchProperties
+- `Stack`
+- `clone`
+- `combine`
+- `createMap`
+- `extend`
+- `extendIfUndefined`
+- `matchProperties`
 
 This functionality is deprecated and was not intended for public export.
 
@@ -189,37 +189,37 @@ Note: this change may cause compilation errors for those attaching event listene
 
 The following APIs have been removed or marked internal in merge-tree and sequence. This functionality was never intended for public export.
 
-- BaseSegment.ack
-- Client
-- CollaborationWindow
-- compareNumbers
-- compareStrings
-- createAnnotateMarkerOp
-- createAnnotateRangeOp
-- createGroupOp
-- createInsertOp
-- createInsertSegmentOp
-- createRemoveRangeOp
-- IConsensusInfo
-- IConsensusValue
-- IMarkerModifiedAction
-- IMergeTreeTextHelper
-- LocalClientId
-- MergeTreeDeltaCallback
-- MergeTreeMaintenanceCallback
-- NonCollabClient
-- SegmentAccumulator
-- SegmentGroup
-- SegmentGroupCollection.enqueue
-- SegmentGroupCollection.dequeue
-- SegmentGroupCollection.pop
-- SortedSegmentSet
-- SortedSegmentSetItem
-- SortedSet
-- toRemovalInfo
-- TreeMaintenanceSequenceNumber
-- UniversalSequenceNumber
-- SharedSegmentSequence.submitSequenceMessage
+- `BaseSegment.ack`
+- `Client`
+- `CollaborationWindow`
+- `compareNumbers`
+- `compareStrings`
+- `createAnnotateMarkerOp`
+- `createAnnotateRangeOp`
+- `createGroupOp`
+- `createInsertOp`
+- `createInsertSegmentOp`
+- `createRemoveRangeOp`
+- `IConsensusInfo`
+- `IConsensusValue`
+- `IMarkerModifiedAction`
+- `IMergeTreeTextHelper`
+- `LocalClientId`
+- `MergeTreeDeltaCallback`
+- `MergeTreeMaintenanceCallback`
+- `NonCollabClient`
+- `SegmentAccumulator`
+- `SegmentGroup`
+- `SegmentGroupCollection.enqueue`
+- `SegmentGroupCollection.dequeue`
+- `SegmentGroupCollection.pop`
+- `SortedSegmentSet`
+- `SortedSegmentSetItem`
+- `SortedSet`
+- `toRemovalInfo`
+- `TreeMaintenanceSequenceNumber`
+- `UniversalSequenceNumber`
+- `SharedSegmentSequence.submitSequenceMessage`
 
 ## sequence: Remove support for combining ops
 
