--- a/docs/content/docs/updates/v1.0.0.md
+++ b/docs/content/docs/updates/v1.0.0.md
@@ -24,7 +24,7 @@ We are now surfacing errors on FluidContainer "disposed" event, so the applicati
 
 ## fluid-framework
 
--   Add the missing [ConnectionState]({{< relref "/docs/api/v1/container-loader.md#connectionstate-enum" >}}) export to `fluid-framework`
+-   Add the missing [ConnectionState]({{< packageref "container-loader" "v1" >}}#connectionstate-enum) export to `fluid-framework`
 
 ## @fluidframework/azure-client
 
